feat: Home.html

--- a/Spring-Project-employee/src/main/resources/templates/Home.html
+++ b/Spring-Project-employee/src/main/resources/templates/Home.html
@@ -10,6 +10,7 @@
   <hr>
         <a href="/department/add"> Add Department </a>
     <hr>
+    	<a href="/department/list"> Department List</a>
     
 
 </body>
