feat: Employee add and list

--- a/Spring-Project-employee/src/main/resources/templates/Home.html
+++ b/Spring-Project-employee/src/main/resources/templates/Home.html
@@ -11,6 +11,10 @@
         <a href="/department/add"> Add Department </a>
     <hr>
     	<a href="/department/list"> Department List</a>
+    <hr>
+    	<a href="/employee/add"> Add Employee </a>
+    <hr>
+    	<a href="/employee/list"> List Employee </a>
     
 
 </body>
