Home.html update

--- a/Spring-Project-employee/src/main/resources/templates/Home.html
+++ b/Spring-Project-employee/src/main/resources/templates/Home.html
@@ -3,19 +3,8 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>home</title>
-</head>
-<body>
- 
-  <h1>Welcome : [[${user.fname}]] </h1>
-  <hr>
-        <a href="/department/add"> Add Department </a>
-    <hr>
-    	<a href="/department/list"> Department List</a>
-    <hr>
-    	<a href="/employee/add"> Add Employee </a>
-    <hr>
-    	<a href="/employee/list"> List Employee </a>
-    
+ 	
+ 	<th:block th:insert="Header.html"></th:block>
 
 </body>
 </html>
