docs: LoginForm.html

--- a/Spring-Project-employee/src/main/resources/templates/LoginForm.html
+++ b/Spring-Project-employee/src/main/resources/templates/LoginForm.html
@@ -3,23 +3,55 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>login</title>
+
+ <!-- Font Icon -->
+    <link rel="stylesheet" href="/login/fonts/material-icon/css/material-design-iconic-font.min.css">
+
+    <!-- Main css -->
+    <link rel="stylesheet" href="/login/css/style.css">
+    
+
 </head>
 <body>
+	
+<div class="container-fluid">
+	<!-- Sign in  Form -->
+        <section class="sign-in">
+            <div class="container">
+                <div class="signin-content">
+                    <div class="signin-image">
+                        <figure><img src="/login/images/signin-image.jpg" alt="sing up image"></figure>
+                        <a href="/user/signup" class="signup-image-link">Create an account</a>
+                    </div>
 
-    <h1>User Login</h1>
-    <hr>
-    
-       <form action="/user/login" method="post">
-       
-          <p style="color:red"> [[${message}]] </p>
-        
-           UserName <input type="text"     name="username"> <br><br>
-           Password <input type="password" name="password"> <br><br>
-          			<input type="submit" value="Login">
-       
-       </form>
-       
-       <a href="/user/signup"> CreateNew Account </a>
-
-</body>
-</html>
+                    <div class="signin-form">
+                        <h2 class="form-title">Login</h2>
+                        <form action="/user/login" method="POST" class="register-form" id="login-form">
+                           
+                           <p style="color:red"> [[${message}]] </p>
+                           
+                            <div class="form-group">
+                                <label for="your_name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                                <input type="text" name="username" id="your_name" placeholder="Your Name"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="your_pass"><i class="zmdi zmdi-lock"></i></label>
+                                <input type="password" name="password" id="your_pass" placeholder="Password"/>
+                            </div>
+                            <div class="form-group form-button">
+                                <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
+                            </div>
+                        </form>
+                        <div class="social-login">
+                            <span class="social-label">Or login with</span>
+                            <ul class="socials">
+                                <li><a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a></li>
+                                <li><a href="#"><i class="display-flex-center zmdi zmdi-twitter"></i></a></li>
+                                <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+</div>
