--- a/Spring-Project-employee/src/main/resources/templates/DepartmentEditForm.html
+++ b/Spring-Project-employee/src/main/resources/templates/DepartmentEditForm.html
@@ -4,15 +4,11 @@
 <meta charset="ISO-8859-1">
 <title>Edit department</title>
 
-<!-- Latest compiled and minified CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Latest compiled JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </head>
 <body>
-
+	
+	<th:block th:insert="Header.html"></th:block>
+	
 	<div class="container-fluid">
 
 		<div class="card">
