--- a/Spring-Project-employee/src/main/resources/templates/EmployeeEditForm.html
+++ b/Spring-Project-employee/src/main/resources/templates/EmployeeEditForm.html
@@ -4,14 +4,10 @@
 <meta charset="ISO-8859-1">
 <title>Edit Employee</title>
 
-<!-- Latest compiled and minified CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Latest compiled JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </head>
 <body>
+	
+	<th:block th:insert="Header.html"></th:block>
 
 	<div class="container-fluid">
 
@@ -23,23 +19,72 @@
 			<form action="/employee/update" method="post" th:object="${empObject}">
 			
 			   <div class="row p-2">
-			      <div class="col-4">Employee Name</div>
+			      <div class="col-4">First Name</div>
 			      <div class="col-6">
-			          <input type="text" th:field="*{name}" class="form-control">
+			          <input type="text" th:field="*{fname}" class="form-control">
 			      </div>
 			   </div>
 			   
 			   <div class="row p-2">
-			      <div class="col-4">Employee Address</div>
+			      <div class="col-4">Last Name</div>
 			      <div class="col-6">
-			          <input type="text" th:field="*{address}" class="form-control">
+			          <input type="text" th:field="*{lname}" class="form-control">
 			      </div>
 			   </div>
 			   
 			   <div class="row p-2">
-			      <div class="col-4">Employee Phone</div>
+			      <div class="col-4">Gender</div>
+			      <div class="col-6">
+			          <input type="text" th:field="*{gender}" class="form-control">
+			      </div>
+			   </div>
+			   
+			    <div class="row p-2">
+			      <div class="col-4">Email</div>
+			      <div class="col-6">
+			          <input type="text" th:field="*{email}" class="form-control">
+			      </div>
+			   </div>
+			   
+			    <div class="row p-2">
+			      <div class="col-4">Phone</div>
 			      <div class="col-6">
 			          <input type="text" th:field="*{phone}" class="form-control">
+			      </div>
+			   </div>
+			   
+			    <div class="row p-2">
+			      <div class="col-4">Company</div>
+			      <div class="col-6">
+			          <input type="text" th:field="*{company}" class="form-control">
+			      </div>
+			   </div>
+			   
+			    <div class="row p-2">
+			      <div class="col-4">Post</div>
+			      <div class="col-6">
+			          <input type="text" th:field="*{post}" class="form-control">
+			      </div>
+			   </div>
+			   
+			    <div class="row p-2">
+			      <div class="col-4">Salary</div>
+			      <div class="col-6">
+			          <input type="text" th:field="*{salary}" class="form-control">
+			      </div>
+			   </div>
+			   
+			    <div class="row p-2">
+			      <div class="col-4">Dob</div>
+			      <div class="col-6">
+			          <input type="text" th:field="*{dob}" class="form-control">
+			      </div>
+			   </div>
+			   
+			    <div class="row p-2">
+			      <div class="col-4">Join Date</div>
+			      <div class="col-6">
+			          <input type="text" th:field="*{joinDate}" class="form-control">
 			      </div>
 			   </div>
 			   
