--- a/Spring-Project-employee/src/main/resources/templates/EmployeeForm.html
+++ b/Spring-Project-employee/src/main/resources/templates/EmployeeForm.html
@@ -19,27 +19,146 @@
 			<form action="/employee/add" method="post">
 			
 			   <div class="row p-2">
-			      <div class="col-4">Employee Name</div>
+			      <div class="col-4">First Name</div>
 			      <div class="col-6">
-			          <input type="text" name="name" class="form-control">
+			          <input type="text" name="fname" class="form-control">
 			      </div>
 			   </div>
 			   
 			   <div class="row p-2">
-			      <div class="col-4">Employee Address</div>
+			      <div class="col-4">Last Name</div>
 			      <div class="col-6">
-			          <input type="text" name="address" class="form-control">
+			          <input type="text" name="lname" class="form-control">
 			      </div>
 			   </div>
 			   
 			   <div class="row p-2">
-			      <div class="col-4">Employee Phone</div>
+			      <div class="col-4">Gender</div>
 			      <div class="col-6">
-			          <input type="text" name="phone" class="form-control" pattern="[1-9]{1}[0-9]{9}">
+			          <input type="radio" name="gender" value="male">Male
+			          <input type="radio" name="gender" value="female">Female
 			      </div>
 			   </div>
 			   
+			   <div class="row p-2">
+			      <div class="col-4">Phone</div>
+			      <div class="col-6">
+			          <input type="text" name="phone" class="form-control">
+			      </div>
+			   </div>
 			   
+			   <div class="row p-2">
+			      <div class="col-4">DoB</div>
+			      <div class="col-6">
+			          <input type="date" name="dob" class="form-control">
+			      </div>
+			   </div>
+			   
+			   <div class="row p-2">
+			      <div class="col-4">Email</div>
+			      <div class="col-6">
+			          <input type="text" name="email" class="form-control">
+			      </div>
+			   </div>
+			   
+			   <div class="row p-2">
+			      <div class="col-4">Company Name</div>
+			      <div class="col-6">
+			          <input type="text" name="company" class="form-control">
+			      </div>
+			   </div>
+			 
+			 <div class="row p-2">
+			      <div class="col-4">Department</div>
+			      <div class="col-6">
+			         
+			         <select name="department" class="form-control">
+			         	
+			         	<option value="">Select</option>
+			         	<option th:each="d: ${deptlist}" th:value="${d.id}">[[${d.dpt_name}]]</option>
+			         
+			         
+			         </select>
+			      
+			      </div>
+			   </div>
+			   
+			   <div class="row p-2">
+			      <div class="col-4">JoinDate</div>
+			      <div class="col-6">
+			          <input type="date" name="joinDate" class="form-control">
+			      </div>
+			   </div>
+			   
+			   <div class="row p-2">
+			      <div class="col-4">Post</div>
+			      <div class="col-6">
+			          <input type="text" name="post" class="form-control">
+			      </div>
+			   </div>
+			   
+			   <div class="row p-2">
+			      <div class="col-4">Salary</div>
+			      <div class="col-6">
+			          <input type="text" name="salary" class="form-control">
+			      </div>
+			   </div>
+			   
+			   <div class="row p-2">
+			      <div class="col-4">Country</div>
+			      <div class="col-6">
+			          <input type="text" name="address.country" class="form-control">
+			      </div>
+			   </div>
+			 
+			 <div class="row p-2">
+			      <div class="col-4">City</div>
+			      <div class="col-6">
+			          <input type="text" name="address.city" class="form-control">
+			      </div>
+			   </div>
+			   
+			   <div class="row p-2">
+			      <div class="col-4">State</div>
+			      <div class="col-6">
+			          
+			          <select name="address.state" class="form-control">
+			          
+			          	<option value=""> Select </option>
+			          	<option value="state-1"> State-1 </option>
+			          	<option value="state-2"> State-2 </option>
+			          	<option value="state-3"> State-3 </option>
+			          	<option value="state-4"> State-4 </option>
+			          	<option value="state-5"> State-5 </option>
+			          	<option value="state-6"> State-6 </option>
+			          	<option value="state-7"> State-7 </option>
+			          
+			          </select>
+
+
+
+			      </div>
+			   </div>
+			   
+			   <div class="row p-2">
+			      <div class="col-4">ZipCode</div>
+			      <div class="col-6">
+			          <input type="text" name="address.zipcode" class="form-control">
+			      </div>
+			   </div>
+			   
+			   <div class="row p-2">
+			      <div class="col-4">Projects</div>
+			      <div class="col-6">
+			          <input type="checkbox" name="projects" value="project-1" > Project-1
+			          &nbsp;&nbsp;<input type="checkbox" name="projects" value="project-2" > Project-2
+			          &nbsp;&nbsp;<input type="checkbox" name="projects" value="project-3" > Project-3
+			          &nbsp;&nbsp;<input type="checkbox" name="projects" value="project-4" > Project-4
+			          &nbsp;&nbsp;<input type="checkbox" name="projects" value="project-5"> Project-5
+			          &nbsp;&nbsp;<input type="checkbox" name="projects" value="project-6" > Project-6
+			      </div>
+			   </div>
+			 
 			   <div class="row p-2">
 			      <div class="col-4"></div>
 			      <div class="col-6">
