--- a/Spring-Project-employee/src/main/resources/templates/Header.html
+++ b/Spring-Project-employee/src/main/resources/templates/Header.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="/employee/add"> Add Employee</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/employee/list"> List Employee</a>
+          <a class="nav-link" href="/employee/list"> Employee List</a>
         </li>
          <li class="nav-item">
           <a class="nav-link" href="/gallery"> Gallery</a>
