--- a/Spring-Project-employee/src/main/resources/templates/EmployeeListForm.html
+++ b/Spring-Project-employee/src/main/resources/templates/EmployeeListForm.html
@@ -4,14 +4,10 @@
 <meta charset="ISO-8859-1">
 <title>Employee list</title>
 
-<!-- Latest compiled and minified CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Latest compiled JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </head>
 <body>
+	
+	<th:block th:insert="Header.html"></th:block>
 	
 	<div class="container-fluid">
 		<div class="card">
@@ -22,19 +18,34 @@
 					
 						<thead class="table table-stripted">
 							<tr>
-								<th>Employee Name</th>
-								<th>Employee Address</th>
-								<th>Employee Phone</th>
-								<th>Action</th>
+								<th>First Name</th>
+								<th>Last Name</th>
+								<th>Gender</th>
+								<th>Email</th>
+								<th>Phone</th>
+								<th>Company</th>
+								<th>Post</th>
+								<th>Salary</th>
+								<th>DoB</th>
+								<th>Join Date</th>
+								
 							</tr>
 						</thead>
 						
 						<tbody>
 							
 							<tr th:each="e: ${empList}">
-								<td>[[${e.name}]]</td>
-								<td>[[${e.address}]]</td>
+								<td>[[${e.fname}]]</td>
+								<td>[[${e.lname}]]</td>
+								<td>[[${e.gender}]]</td>
+								<td>[[${e.email}]]</td>
 								<td>[[${e.phone}]]</td>
+								<td>[[${e.company}]]</td>
+								<td>[[${e.post}]]</td>
+								<td>[[${e.salary}]]</td>
+								<td>[[${e.dob}]]</td>
+								<td>[[${e.joinDate}]]</td>
+								
 								<th>
 									<a th:href="@{/employee/edit(id=${e.id})}"> <input type="submit" value="Edit" class="btn btn-success btn-sm"></a>
 									<a th:href="@{/employee/delete(id=${e.id})}"> <input type="submit" value="Delete" class="btn btn-danger btn-sm"></a>
