--- a/Spring-Project-employee/src/main/resources/templates/EmployeeForm.html
+++ b/Spring-Project-employee/src/main/resources/templates/EmployeeForm.html
@@ -36,7 +36,7 @@
 			      <div class="col-4">Gender</div>
 			      <div class="col-6">
 			          <input type="radio" name="gender" value="male">Male
-			          <input type="radio" name="gender" value="female">Female
+			          &nbsp;&nbsp;<input type="radio" name="gender" value="female">Female
 			      </div>
 			   </div>
 			   
@@ -134,8 +134,6 @@
 			          	<option value="state-7"> State-7 </option>
 			          
 			          </select>
-
-
 
 			      </div>
 			   </div>
