Header.html Update

--- a/Spring-Project-employee/src/main/resources/templates/Header.html
+++ b/Spring-Project-employee/src/main/resources/templates/Header.html
@@ -16,7 +16,7 @@
  
  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="javascript:void(0)">EMS</a>
+    <a class="navbar-brand" href="/user/home">EMS</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
