--- a/Spring-Project-employee/src/main/resources/templates/Header.html
+++ b/Spring-Project-employee/src/main/resources/templates/Header.html
@@ -37,6 +37,9 @@
          <li class="nav-item">
           <a class="nav-link" href="/gallery"> Gallery</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/upload"> Upload</a>
+        </li>
          <li class="nav-item">
           <a class="nav-link" href="/phone"> Phone</a>
         </li>
