Header.html Update

--- a/Spring-Project-employee/src/main/resources/templates/Header.html
+++ b/Spring-Project-employee/src/main/resources/templates/Header.html
@@ -49,7 +49,7 @@
         
       </ul>
       <form class="d-flex" action="/user/logout">
-    	 <h6 style="color:yellow" th:if="${user != null}">Welcome : [[${user.fname}]] </h6> &nbsp;
+    	 <h6 style="color:yellow" th:if="${session.validuser != null}">Welcome : [[${session.validuser.fname}]] </h6> &nbsp;
         <button class="btn btn-danger btn-sm" type="submit">Logout</button>
       </form>
     </div>
