--- a/Spring-Project-employee/src/main/resources/templates/Header.html
+++ b/Spring-Project-employee/src/main/resources/templates/Header.html
@@ -39,12 +39,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/upload"> Upload</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link" href="/phone"> Phone</a>
-        </li>
-         <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link" href="/contact"> Contact</a>
+        </li>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="/user/profile"> Profile</a>
         </li>
         
       </ul>
